# phopp_rust_os

./: Cargo.toml
.cargo/: config
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
