[package]
name = "rust_os"
version = "0.1.0"
authors = ["hunterlester <guilfordhunter@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.8.0"
volatile = "0.2.6"
spin = "0.5.2"

[package.metadata.bootimage]
default-target = "x86_64-target_config.json"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
